# tg_bot_giveaway_sendler

./: .env  README.md  pyproject.toml  start.py
bot/: config.py  logging.py  misc.py  scheduler.py  states.py
bot/filters/: __init__.py  admin.py
bot/handlers/: __init__.py  load_ids.py  log_report.py  main.py  sponsors.py
bot/handlers/giveaway/: __init__.py  create.py  give_list.py  index.py  members.py  sender.py
bot/jobs/: __init__.py  check_members.py  gdata.py  sender.py
bot/keyboards/: __init__.py  buttons.py  callbacks.py  main.py
bot/middlewares/: __init__.py
bot/models/: __init__.py  chat.py  db.py  giveaway.py  members.py  members_check.py  sender.py  sponsor.py  user.py
bot/utils/: __init__.py  check_members.py  giveaway.py  in_process.py  mentions.py  sender.py  txt.py
migrations/models/: 0_20230710172419_init.py
